Closed Bug 63665 Opened 24 years ago Closed 21 years ago

Fix shutdown leaks in nsTraceRefcnt

Categories

(Core :: XPCOM, defect, P3)

defect

Tracking

()

RESOLVED FIXED
Future

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

(Whiteboard: [patch])

Attachments

(1 file, 2 obsolete files)

This morning I checked in a fix (see bug 61243) so that nsTraceRefcnt deletes
its hashtables on shutdown.  However, they still don't have the correct alloc
ops, so the things owned by the hashtables are still leaked.

I think I have a fix for the correct alloc ops, although I'd like to test it a
bit more before I consider it ready.
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla0.8
This has the side effect of adding, after nsTraceRefcnt has been shut down,
information about all objects to refcount logs rather than just the ones
being logged.  It's annoying, but perhaps we need a better incentive to
clean those things up...
Target Milestone: mozilla0.8 → mozilla0.9
I think the side effect I mentioned is actually more likely from the earlier fix
that's already in.  If it's annoying enough, I could try to figure out which
thing I need to leak to fix it, although it really shouldn't be much of a problem...
Since I really need to get the stuff in bug 66159 tested on Windows and Mac,
moving this to mozilla 0.9.1
Target Milestone: mozilla0.9 → mozilla0.9.1
Pushing out again.  I'll try to land this early in 0.9.2.  Really.  (I should
have time this time around.)
Target Milestone: mozilla0.9.1 → mozilla0.9.2
Target Milestone: mozilla0.9.2 → mozilla0.9.3
Target Milestone: mozilla0.9.3 → mozilla0.9.4
Target Milestone: mozilla0.9.4 → mozilla0.9.5
Target Milestone: mozilla0.9.5 → mozilla0.9.6
Target Milestone: mozilla0.9.6 → mozilla0.9.7
Target Milestone: mozilla0.9.7 → Future
*** Bug 199059 has been marked as a duplicate of this bug. ***
Attachment #21252 - Attachment is obsolete: true
Attachment #22181 - Attachment is obsolete: true
Comment on attachment 118379 [details] [diff] [review]
attachment 22181 [details] [diff] [review] w/ conflict resolved

this works, would you please check it in?
Attachment #118379 - Flags: review+
Comment on attachment 118379 [details] [diff] [review]
attachment 22181 [details] [diff] [review] w/ conflict resolved

sr=alecf
Attachment #118379 - Flags: superreview?(alecf) → superreview+
Fix checked in to trunk, 2003-03-25 06:53 PST.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: