Fix shutdown leaks in nsTraceRefcnt.  b=63665  r=timeless  sr=alecf